--- a/package.json
+++ b/package.json
@@ -3,23 +3,29 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": " nodemon ./bin/www"
+    "start": " nodemon ./bin/www",
+    "test": "mocha --timeout 10000"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
+    "expect": "^26.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "json-patch": "^0.7.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.0",
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0",
     "passport": "^0.3.2",
     "passport-jwt": "^4.0.0",
     "request": "^2.88.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "supertest": "^4.0.2"
   }
 }
