--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.1",
     "json-patch": "^0.7.0",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.1.1",
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0",
